# AlmondFEM

./: CMakeLists.txt  README.md  vcpkg.json
Application1/: Application1.vcxproj  Application1.vcxproj.filters  CMakeLists.txt
Application1/src/: Application1.cpp
StaticLib1/: StaticLib1.vcxproj
app1/: app1.vcxproj
bubblesim/: CMakeLists.txt  SimBubblesDemo.sln
bubblesim/ConsoleApplication1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
bubblesim/ConsoleApplication1/include/simbubbles/: simulation.hpp
bubblesim/ConsoleApplication1/src/: main.cpp
cmakeapp1/: CMakeLists.txt
cmakeapp1/src/: main.cpp  solver_benchmark.cpp
docs/: CHANGELOG.md  api-overview.md  linux.md  roadmap.md  sparse-particle-demo.md  tools_list.txt  windows.md
include/almond_fem/: almond_fem.hpp  bubble_simulation.hpp  mesh.hpp  problem.hpp  solver.hpp  sparse_particle_system.hpp
include/almond_fem/detail/: dense_matrix.hpp  sparse_matrix.hpp
shared/safe_io/include/safe_io/: utils.hpp
shared/safe_io/src/: utils.cpp
